[package]
name = "mlmd"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
sqlx =  { version = "0.4", features = ["any", "mysql", "sqlite", "runtime-async-std-native-tls"] }
thiserror = "1"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
tempfile = "3"
