[package]
name = "mlmd"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A Rust implementation of ml-metadata"
homepage = "https://github.com/sile/mlmd"
repository = "https://github.com/sile/mlmd"
readme = "README.md"
license = "MIT"

[badges]
coveralls = {repository = "sile/mlmd"}

[dependencies]
anyhow = "1"
futures = "0.3"
sqlx =  { version = "0.4", features = ["any", "mysql", "sqlite", "runtime-async-std-native-tls"] }
thiserror = "1"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
env_logger = "0.8"
structopt = "0.3"
tempfile = "3"
