[package]
name = "mlmd"
version = "0.2.11"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A Rust implementation of ml-metadata"
homepage = "https://github.com/sile/mlmd"
repository = "https://github.com/sile/mlmd"
readme = "README.md"
license = "MIT"

[badges]
coveralls = {repository = "sile/mlmd"}

[features]
default = ["runtime-tokio-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]

[dependencies]
anyhow = "1"
futures = "0.3"
sqlx =  { version = "0.5", features = ["any", "mysql", "sqlite"] }
thiserror = "1"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
env_logger = "0.8"
structopt = "0.3"
tempfile = "3"
